[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.19.0", features = ["alloc", "logger"], optional = true }
uefi-services = {version = "0.16.0", optional = true}

[features]
default = []
uefi-feature = ["uefi", "uefi-services"]