[package]
edition = "2021"
name = "sikikernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = {version = "1.1.1"}
lib = {path = "../lib"}
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.15", default-features = false}
once_cell = {version = "1.17.1", default-features = false, features = ["critical-section"]}
uart_16550 = "0.2.18"
ux = {version = "0.1.5", default-features = false}
x86_64 = "0.14.7"
