# cargo-features = ["per-package-target"]

[package]
edition = "2021"
name = "sikikernel"
version = "0.1.0"
# forced-target = "x86_64-unknown-none-os.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {name = "1.0.1", default-features = false, features = ["atomic", "alloc"]}
critical-section = {version = "1.1.1"}
lib = {path = "../lib"}
num = {version = "0.4.0", default-features = false}
once_cell = {version = "1.17.1", default-features = false, features = ["critical-section"]}
uart_16550 = "0.2.18"
ux = {version = "0.1.5", default-features = false}
x86_64 = "0.14.7"
