[package]
name = "sikiloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.19.0", features = ["alloc", "logger"] }
uefi-services = "0.16.0"
goblin = { version = "0.6", features = ["elf32", "elf64", "endian_fd"], default-features = false }
